@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1589] fixed no permission error when try to edit host form from search screen (Vedmak)
  - [ZBX-1561] fixed errors when view event info as admin user (Vedmak)
  - [ZBX-954] fixed item property reference when adding log item with type other than "log" (Richlv)
  - [ZBX-1493] fixed disabled host icon view (Aly)
